# ETK-prototype

./: .gitignore  README.md  upload-helper.js
server/: command.js  docker-compose.prod.yml  docker-compose.yaml
server/admin-panel/: index.html  package.json  vue.config.js
server/admin-panel/public/: index.html
server/admin-panel/src/: App.vue  main.js  router.js
server/admin-panel/src/components/: EncounterChart.vue  EncounterList.vue
server/admin-panel/src/pages/: ChartPage.vue  StatisticsPage.vue  TablePage.vue
server/admin-panel/src/util/: data-helpers.js  vue-plotly.vue
server/api/: .eslintrc  Dockerfile  nodemon.json  package.json
server/api/native/: Cargo.toml
server/api/native/.cargo/: config
server/api/native/src/: key_encoder.rs  lib.rs  main.rs
server/api/src/: index.js
server/api/src/config/: index.js
server/api/src/exceptions/: api-exception.js  index.js
server/api/src/models/: encouter.js
server/api/src/models/encounter/: encounter.helpers.js  index.js
server/api/src/models/encounter-record/: index.js
server/api/src/models/positive-key/: index.js  positive-key.helpers.js
server/api/src/models/trace-event/: index.js
server/api/src/routes/: api.js  helpers.js
server/api/src/routes/encounters/: index.js
server/api/src/services/: key-encoder.js  mongoose.js
server/api/src/util/: index.js
server/nginx/: Dockerfile-prod  nginx.conf
server/nginx/conf.d/: common_location.conf  ssl.conf
server/nginx/conf.d/sites-enabled/: api.conf
